src/parser.output
Terminals unused in grammar

    T_LOGICNOT
    T_DIVSELF
    T_MODSELF
    T_LSLSELF
    T_LSRSELF
    T_ANDSELF
    T_BOOL
    T_STRING


Rules useless in parser due to conflicts

   32 ASSIGN_EXPR: VARIABLE T_SUBSELF LOGIC_OR_EXPR


State 99 conflicts: 2 reduce/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: MEGA_FUNCT_DEFINITION

    2 MEGA_FUNCT_DEFINITION: FUNCTION_DEFINITION
    3                      | MEGA_FUNCT_DEFINITION FUNCTION_DEFINITION

    4 FUNCTION_CALL: VARIABLE T_LBRACKET VARIABLE_LIST T_RBRACKET

    5 FUNCTION_DEFINITION: EMPTY_FUNCTION_DEFINITION
    6                    | ARG_FUNCTION_DEFINITION

    7 EMPTY_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET T_RBRACKET MEGA_STATEMENT

    8 ARG_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET ARGUMENT_LIST T_RBRACKET MEGA_STATEMENT
    9                        | DECLARATOR T_LBRACKET ARGUMENT_LIST T_RBRACKET T_SEMICOLON
   10                        | DECLARATOR T_LBRACKET T_RBRACKET T_SEMICOLON

   11 MEGA_STATEMENT: T_CURLYLEFT STATEMENT_LIST T_CURLYRIGHT

   12 STATEMENT_LIST: STATEMENT
   13               | STATEMENT_LIST STATEMENT

   14 STATEMENT: ASSIGN_EXPR T_SEMICOLON
   15          | T_RETURN LOGIC_OR_EXPR T_SEMICOLON
   16          | IF_STATEMENT
   17          | WHILE_STATEMENT
   18          | FOR_STATEMENT
   19          | DECLARATOR T_SEMICOLON

   20 FOR_STATEMENT: T_FOR T_LBRACKET ASSIGN_EXPR T_SEMICOLON LOGIC_OR_EXPR T_SEMICOLON ASSIGN_EXPR T_RBRACKET MEGA_STATEMENT
   21              | T_FOR T_LBRACKET ASSIGN_EXPR T_SEMICOLON LOGIC_OR_EXPR T_SEMICOLON ASSIGN_EXPR T_RBRACKET T_CURLYLEFT T_CURLYRIGHT

   22 WHILE_STATEMENT: T_WHILE T_LBRACKET LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT
   23                | T_WHILE T_LBRACKET LOGIC_OR_EXPR T_RBRACKET T_CURLYLEFT T_CURLYRIGHT

   24 IF_STATEMENT: T_IF T_LBRACKET LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT
   25             | T_IF T_LBRACKET LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT T_ELSE MEGA_STATEMENT
   26             | T_IF T_LBRACKET LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT T_ELSE IF_STATEMENT

   27 ASSIGN_EXPR: VARIABLE T_ASSIGN LOGIC_OR_EXPR
   28            | DECLARATOR T_ASSIGN LOGIC_OR_EXPR
   29            | VARIABLE T_ADDSELF LOGIC_OR_EXPR
   30            | VARIABLE T_SUBSELF LOGIC_OR_EXPR
   31            | VARIABLE T_MULSELF LOGIC_OR_EXPR
   32            | VARIABLE T_SUBSELF LOGIC_OR_EXPR
   33            | VARIABLE T_PLUSPLUS
   34            | VARIABLE T_MINUSMINUS

   35 LOGIC_OR_EXPR: LOGIC_AND_EXPR
   36              | LOGIC_OR_EXPR T_LOGICOR LOGIC_AND_EXPR

   37 LOGIC_AND_EXPR: OR_EXPR
   38               | LOGIC_AND_EXPR T_LOGICAND OR_EXPR

   39 OR_EXPR: XOR_EXPR
   40        | OR_EXPR T_BITWISE_OR COMPARISSON_EXPR

   41 XOR_EXPR: AND_EXPR
   42         | XOR_EXPR T_BITWISE_XOR AND_EXPR

   43 AND_EXPR: EQUALITY_EXPR
   44         | AND_EXPR T_BITWISE_AND EQUALITY_EXPR

   45 EQUALITY_EXPR: COMPARISSON_EXPR
   46              | EQUALITY_EXPR T_EQUAL COMPARISSON_EXPR
   47              | EQUALITY_EXPR T_NOTEQUAL COMPARISSON_EXPR

   48 COMPARISSON_EXPR: SHIFT_EXPR
   49                 | COMPARISSON_EXPR T_LESSTHAN SHIFT_EXPR
   50                 | COMPARISSON_EXPR T_LESSEQUAL SHIFT_EXPR
   51                 | COMPARISSON_EXPR T_MOREEQUAL SHIFT_EXPR
   52                 | COMPARISSON_EXPR T_MORETHAN SHIFT_EXPR

   53 SHIFT_EXPR: ADD_EXPR
   54           | SHIFT_EXPR T_BITWISE_LEFT ADD_EXPR
   55           | SHIFT_EXPR T_BITWISE_RIGHT ADD_EXPR

   56 ADD_EXPR: TERM
   57         | ADD_EXPR T_PLUS TERM
   58         | ADD_EXPR T_MINUS TERM

   59 TERM: UNARY
   60     | TERM T_TIMES UNARY
   61     | TERM T_DIVIDE UNARY
   62     | UNARY T_MODULO FACTOR

   63 UNARY: FACTOR
   64      | T_MINUS FACTOR
   65      | T_PLUSPLUS VARIABLE
   66      | T_MINUSMINUS VARIABLE

   67 FACTOR: VARIABLE
   68       | T_NUMBER
   69       | T_LBRACKET ADD_EXPR T_RBRACKET
   70       | FUNCTION_CALL

   71 VARIABLE_LIST: LOGIC_OR_EXPR
   72              | LOGIC_OR_EXPR T_COMMA LOGIC_OR_EXPR
   73              | LOGIC_OR_EXPR T_COMMA LOGIC_OR_EXPR T_COMMA LOGIC_OR_EXPR
   74              | LOGIC_OR_EXPR T_COMMA LOGIC_OR_EXPR T_COMMA LOGIC_OR_EXPR T_COMMA LOGIC_OR_EXPR

   75 ARGUMENT_LIST: DECLARATOR
   76              | ARGUMENT_LIST T_COMMA DECLARATOR

   77 DECLARATOR: TYPEDEF

   78 VARIABLE: T_NAME_STR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_TIMES (258) 60
    T_DIVIDE (259) 61
    T_PLUS (260) 57
    T_MINUS (261) 58 64
    T_LESSTHAN (262) 49
    T_MORETHAN (263) 52
    T_LESSEQUAL (264) 50
    T_MOREEQUAL (265) 51
    T_EQUAL (266) 46
    T_NOTEQUAL (267) 47
    T_BITWISE_AND (268) 44
    T_BITWISE_XOR (269) 42
    T_BITWISE_OR (270) 40
    T_SEMICOLON (271) 9 10 14 15 19 20 21
    T_CURLYLEFT (272) 11 21 23
    T_CURLYRIGHT (273) 11 21 23
    T_ASSIGN (274) 27 28
    T_PLUSPLUS (275) 33 65
    T_MINUSMINUS (276) 34 66
    T_LOGICNOT (277)
    T_MODULO (278) 62
    T_BITWISE_LEFT (279) 54
    T_BITWISE_RIGHT (280) 55
    T_LOGICAND (281) 38
    T_LOGICOR (282) 36
    T_DIVSELF (283)
    T_ADDSELF (284) 29
    T_SUBSELF (285) 30 32
    T_MULSELF (286) 31
    T_COMMA (287) 72 73 74 76
    T_FOR (288) 20 21
    T_MODSELF (289)
    T_LSLSELF (290)
    T_LSRSELF (291)
    T_ANDSELF (292)
    T_LBRACKET (293) 4 7 8 9 10 20 21 22 23 24 25 26 69
    T_RBRACKET (294) 4 7 8 9 10 20 21 22 23 24 25 26 69
    T_NUMBER <number> (295) 68
    T_NAME_STR <string> (296) 78
    TYPEDEF <string> (297) 77
    T_IF (298) 24 25 26
    T_ELSE (299) 25 26
    T_WHILE (300) 22 23
    T_BOOL (301)
    T_STRING (302)
    T_RETURN (303) 15


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    ROOT (50)
        on left: 1
        on right: 0
    MEGA_FUNCT_DEFINITION <expr> (51)
        on left: 2 3
        on right: 1 3
    FUNCTION_CALL <expr> (52)
        on left: 4
        on right: 70
    FUNCTION_DEFINITION <expr> (53)
        on left: 5 6
        on right: 2 3
    EMPTY_FUNCTION_DEFINITION <expr> (54)
        on left: 7
        on right: 5
    ARG_FUNCTION_DEFINITION <expr> (55)
        on left: 8 9 10
        on right: 6
    MEGA_STATEMENT <expr> (56)
        on left: 11
        on right: 7 8 20 22 24 25 26
    STATEMENT_LIST <expr> (57)
        on left: 12 13
        on right: 11 13
    STATEMENT <expr> (58)
        on left: 14 15 16 17 18 19
        on right: 12 13
    FOR_STATEMENT <expr> (59)
        on left: 20 21
        on right: 18
    WHILE_STATEMENT <expr> (60)
        on left: 22 23
        on right: 17
    IF_STATEMENT <expr> (61)
        on left: 24 25 26
        on right: 16 26
    ASSIGN_EXPR <expr> (62)
        on left: 27 28 29 30 31 32 33 34
        on right: 14 20 21
    LOGIC_OR_EXPR <expr> (63)
        on left: 35 36
        on right: 15 20 21 22 23 24 25 26 27 28 29 30 31 32 36 71 72 73 74
    LOGIC_AND_EXPR <expr> (64)
        on left: 37 38
        on right: 35 36 38
    OR_EXPR <expr> (65)
        on left: 39 40
        on right: 37 38 40
    XOR_EXPR <expr> (66)
        on left: 41 42
        on right: 39 42
    AND_EXPR <expr> (67)
        on left: 43 44
        on right: 41 42 44
    EQUALITY_EXPR <expr> (68)
        on left: 45 46 47
        on right: 43 44 46 47
    COMPARISSON_EXPR <expr> (69)
        on left: 48 49 50 51 52
        on right: 40 45 46 47 49 50 51 52
    SHIFT_EXPR <expr> (70)
        on left: 53 54 55
        on right: 48 49 50 51 52 54 55
    ADD_EXPR <expr> (71)
        on left: 56 57 58
        on right: 53 54 55 57 58 69
    TERM <expr> (72)
        on left: 59 60 61 62
        on right: 56 57 58 60 61
    UNARY <expr> (73)
        on left: 63 64 65 66
        on right: 59 60 61 62
    FACTOR <expr> (74)
        on left: 67 68 69 70
        on right: 62 63 64
    VARIABLE_LIST <expr> (75)
        on left: 71 72 73 74
        on right: 4
    ARGUMENT_LIST <expr> (76)
        on left: 75 76
        on right: 8 9 76
    DECLARATOR <expr> (77)
        on left: 77
        on right: 7 8 9 10 19 28 75 76
    VARIABLE <expr> (78)
        on left: 78
        on right: 4 27 29 30 31 32 33 34 65 66 67


State 0

    0 $accept: . ROOT $end

    TYPEDEF  shift, and go to state 1

    ROOT                       go to state 2
    MEGA_FUNCT_DEFINITION      go to state 3
    FUNCTION_DEFINITION        go to state 4
    EMPTY_FUNCTION_DEFINITION  go to state 5
    ARG_FUNCTION_DEFINITION    go to state 6
    DECLARATOR                 go to state 7


State 1

   77 DECLARATOR: TYPEDEF .

    $default  reduce using rule 77 (DECLARATOR)


State 2

    0 $accept: ROOT . $end

    $end  shift, and go to state 8


State 3

    1 ROOT: MEGA_FUNCT_DEFINITION .
    3 MEGA_FUNCT_DEFINITION: MEGA_FUNCT_DEFINITION . FUNCTION_DEFINITION

    TYPEDEF  shift, and go to state 1

    $default  reduce using rule 1 (ROOT)

    FUNCTION_DEFINITION        go to state 9
    EMPTY_FUNCTION_DEFINITION  go to state 5
    ARG_FUNCTION_DEFINITION    go to state 6
    DECLARATOR                 go to state 7


State 4

    2 MEGA_FUNCT_DEFINITION: FUNCTION_DEFINITION .

    $default  reduce using rule 2 (MEGA_FUNCT_DEFINITION)


State 5

    5 FUNCTION_DEFINITION: EMPTY_FUNCTION_DEFINITION .

    $default  reduce using rule 5 (FUNCTION_DEFINITION)


State 6

    6 FUNCTION_DEFINITION: ARG_FUNCTION_DEFINITION .

    $default  reduce using rule 6 (FUNCTION_DEFINITION)


State 7

    7 EMPTY_FUNCTION_DEFINITION: DECLARATOR . T_LBRACKET T_RBRACKET MEGA_STATEMENT
    8 ARG_FUNCTION_DEFINITION: DECLARATOR . T_LBRACKET ARGUMENT_LIST T_RBRACKET MEGA_STATEMENT
    9                        | DECLARATOR . T_LBRACKET ARGUMENT_LIST T_RBRACKET T_SEMICOLON
   10                        | DECLARATOR . T_LBRACKET T_RBRACKET T_SEMICOLON

    T_LBRACKET  shift, and go to state 10


State 8

    0 $accept: ROOT $end .

    $default  accept


State 9

    3 MEGA_FUNCT_DEFINITION: MEGA_FUNCT_DEFINITION FUNCTION_DEFINITION .

    $default  reduce using rule 3 (MEGA_FUNCT_DEFINITION)


State 10

    7 EMPTY_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET . T_RBRACKET MEGA_STATEMENT
    8 ARG_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET . ARGUMENT_LIST T_RBRACKET MEGA_STATEMENT
    9                        | DECLARATOR T_LBRACKET . ARGUMENT_LIST T_RBRACKET T_SEMICOLON
   10                        | DECLARATOR T_LBRACKET . T_RBRACKET T_SEMICOLON

    T_RBRACKET  shift, and go to state 11
    TYPEDEF     shift, and go to state 1

    ARGUMENT_LIST  go to state 12
    DECLARATOR     go to state 13


State 11

    7 EMPTY_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET T_RBRACKET . MEGA_STATEMENT
   10 ARG_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET T_RBRACKET . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 14
    T_CURLYLEFT  shift, and go to state 15

    MEGA_STATEMENT  go to state 16


State 12

    8 ARG_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET ARGUMENT_LIST . T_RBRACKET MEGA_STATEMENT
    9                        | DECLARATOR T_LBRACKET ARGUMENT_LIST . T_RBRACKET T_SEMICOLON
   76 ARGUMENT_LIST: ARGUMENT_LIST . T_COMMA DECLARATOR

    T_COMMA     shift, and go to state 17
    T_RBRACKET  shift, and go to state 18


State 13

   75 ARGUMENT_LIST: DECLARATOR .

    $default  reduce using rule 75 (ARGUMENT_LIST)


State 14

   10 ARG_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET T_RBRACKET T_SEMICOLON .

    $default  reduce using rule 10 (ARG_FUNCTION_DEFINITION)


State 15

   11 MEGA_STATEMENT: T_CURLYLEFT . STATEMENT_LIST T_CURLYRIGHT

    T_FOR       shift, and go to state 19
    T_NAME_STR  shift, and go to state 20
    TYPEDEF     shift, and go to state 1
    T_IF        shift, and go to state 21
    T_WHILE     shift, and go to state 22
    T_RETURN    shift, and go to state 23

    STATEMENT_LIST   go to state 24
    STATEMENT        go to state 25
    FOR_STATEMENT    go to state 26
    WHILE_STATEMENT  go to state 27
    IF_STATEMENT     go to state 28
    ASSIGN_EXPR      go to state 29
    DECLARATOR       go to state 30
    VARIABLE         go to state 31


State 16

    7 EMPTY_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET T_RBRACKET MEGA_STATEMENT .

    $default  reduce using rule 7 (EMPTY_FUNCTION_DEFINITION)


State 17

   76 ARGUMENT_LIST: ARGUMENT_LIST T_COMMA . DECLARATOR

    TYPEDEF  shift, and go to state 1

    DECLARATOR  go to state 32


State 18

    8 ARG_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET ARGUMENT_LIST T_RBRACKET . MEGA_STATEMENT
    9                        | DECLARATOR T_LBRACKET ARGUMENT_LIST T_RBRACKET . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 33
    T_CURLYLEFT  shift, and go to state 15

    MEGA_STATEMENT  go to state 34


State 19

   20 FOR_STATEMENT: T_FOR . T_LBRACKET ASSIGN_EXPR T_SEMICOLON LOGIC_OR_EXPR T_SEMICOLON ASSIGN_EXPR T_RBRACKET MEGA_STATEMENT
   21              | T_FOR . T_LBRACKET ASSIGN_EXPR T_SEMICOLON LOGIC_OR_EXPR T_SEMICOLON ASSIGN_EXPR T_RBRACKET T_CURLYLEFT T_CURLYRIGHT

    T_LBRACKET  shift, and go to state 35


State 20

   78 VARIABLE: T_NAME_STR .

    $default  reduce using rule 78 (VARIABLE)


State 21

   24 IF_STATEMENT: T_IF . T_LBRACKET LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT
   25             | T_IF . T_LBRACKET LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT T_ELSE MEGA_STATEMENT
   26             | T_IF . T_LBRACKET LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT T_ELSE IF_STATEMENT

    T_LBRACKET  shift, and go to state 36


State 22

   22 WHILE_STATEMENT: T_WHILE . T_LBRACKET LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT
   23                | T_WHILE . T_LBRACKET LOGIC_OR_EXPR T_RBRACKET T_CURLYLEFT T_CURLYRIGHT

    T_LBRACKET  shift, and go to state 37


State 23

   15 STATEMENT: T_RETURN . LOGIC_OR_EXPR T_SEMICOLON

    T_MINUS       shift, and go to state 38
    T_PLUSPLUS    shift, and go to state 39
    T_MINUSMINUS  shift, and go to state 40
    T_LBRACKET    shift, and go to state 41
    T_NUMBER      shift, and go to state 42
    T_NAME_STR    shift, and go to state 20

    FUNCTION_CALL     go to state 43
    LOGIC_OR_EXPR     go to state 44
    LOGIC_AND_EXPR    go to state 45
    OR_EXPR           go to state 46
    XOR_EXPR          go to state 47
    AND_EXPR          go to state 48
    EQUALITY_EXPR     go to state 49
    COMPARISSON_EXPR  go to state 50
    SHIFT_EXPR        go to state 51
    ADD_EXPR          go to state 52
    TERM              go to state 53
    UNARY             go to state 54
    FACTOR            go to state 55
    VARIABLE          go to state 56


State 24

   11 MEGA_STATEMENT: T_CURLYLEFT STATEMENT_LIST . T_CURLYRIGHT
   13 STATEMENT_LIST: STATEMENT_LIST . STATEMENT

    T_CURLYRIGHT  shift, and go to state 57
    T_FOR         shift, and go to state 19
    T_NAME_STR    shift, and go to state 20
    TYPEDEF       shift, and go to state 1
    T_IF          shift, and go to state 21
    T_WHILE       shift, and go to state 22
    T_RETURN      shift, and go to state 23

    STATEMENT        go to state 58
    FOR_STATEMENT    go to state 26
    WHILE_STATEMENT  go to state 27
    IF_STATEMENT     go to state 28
    ASSIGN_EXPR      go to state 29
    DECLARATOR       go to state 30
    VARIABLE         go to state 31


State 25

   12 STATEMENT_LIST: STATEMENT .

    $default  reduce using rule 12 (STATEMENT_LIST)


State 26

   18 STATEMENT: FOR_STATEMENT .

    $default  reduce using rule 18 (STATEMENT)


State 27

   17 STATEMENT: WHILE_STATEMENT .

    $default  reduce using rule 17 (STATEMENT)


State 28

   16 STATEMENT: IF_STATEMENT .

    $default  reduce using rule 16 (STATEMENT)


State 29

   14 STATEMENT: ASSIGN_EXPR . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 59


State 30

   19 STATEMENT: DECLARATOR . T_SEMICOLON
   28 ASSIGN_EXPR: DECLARATOR . T_ASSIGN LOGIC_OR_EXPR

    T_SEMICOLON  shift, and go to state 60
    T_ASSIGN     shift, and go to state 61


State 31

   27 ASSIGN_EXPR: VARIABLE . T_ASSIGN LOGIC_OR_EXPR
   29            | VARIABLE . T_ADDSELF LOGIC_OR_EXPR
   30            | VARIABLE . T_SUBSELF LOGIC_OR_EXPR
   31            | VARIABLE . T_MULSELF LOGIC_OR_EXPR
   32            | VARIABLE . T_SUBSELF LOGIC_OR_EXPR
   33            | VARIABLE . T_PLUSPLUS
   34            | VARIABLE . T_MINUSMINUS

    T_ASSIGN      shift, and go to state 62
    T_PLUSPLUS    shift, and go to state 63
    T_MINUSMINUS  shift, and go to state 64
    T_ADDSELF     shift, and go to state 65
    T_SUBSELF     shift, and go to state 66
    T_MULSELF     shift, and go to state 67


State 32

   76 ARGUMENT_LIST: ARGUMENT_LIST T_COMMA DECLARATOR .

    $default  reduce using rule 76 (ARGUMENT_LIST)


State 33

    9 ARG_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET ARGUMENT_LIST T_RBRACKET T_SEMICOLON .

    $default  reduce using rule 9 (ARG_FUNCTION_DEFINITION)


State 34

    8 ARG_FUNCTION_DEFINITION: DECLARATOR T_LBRACKET ARGUMENT_LIST T_RBRACKET MEGA_STATEMENT .

    $default  reduce using rule 8 (ARG_FUNCTION_DEFINITION)


State 35

   20 FOR_STATEMENT: T_FOR T_LBRACKET . ASSIGN_EXPR T_SEMICOLON LOGIC_OR_EXPR T_SEMICOLON ASSIGN_EXPR T_RBRACKET MEGA_STATEMENT
   21              | T_FOR T_LBRACKET . ASSIGN_EXPR T_SEMICOLON LOGIC_OR_EXPR T_SEMICOLON ASSIGN_EXPR T_RBRACKET T_CURLYLEFT T_CURLYRIGHT

    T_NAME_STR  shift, and go to state 20
    TYPEDEF     shift, and go to state 1

    ASSIGN_EXPR  go to state 68
    DECLARATOR   go to state 69
    VARIABLE     go to state 31


State 36

   24 IF_STATEMENT: T_IF T_LBRACKET . LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT
   25             | T_IF T_LBRACKET . LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT T_ELSE MEGA_STATEMENT
   26             | T_IF T_LBRACKET . LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT T_ELSE IF_STATEMENT

    T_MINUS       shift, and go to state 38
    T_PLUSPLUS    shift, and go to state 39
    T_MINUSMINUS  shift, and go to state 40
    T_LBRACKET    shift, and go to state 41
    T_NUMBER      shift, and go to state 42
    T_NAME_STR    shift, and go to state 20

    FUNCTION_CALL     go to state 43
    LOGIC_OR_EXPR     go to state 70
    LOGIC_AND_EXPR    go to state 45
    OR_EXPR           go to state 46
    XOR_EXPR          go to state 47
    AND_EXPR          go to state 48
    EQUALITY_EXPR     go to state 49
    COMPARISSON_EXPR  go to state 50
    SHIFT_EXPR        go to state 51
    ADD_EXPR          go to state 52
    TERM              go to state 53
    UNARY             go to state 54
    FACTOR            go to state 55
    VARIABLE          go to state 56


State 37

   22 WHILE_STATEMENT: T_WHILE T_LBRACKET . LOGIC_OR_EXPR T_RBRACKET MEGA_STATEMENT
   23                | T_WHILE T_LBRACKET . LOGIC_OR_EXPR T_RBRACKET T_CURLYLEFT T_CURLYRIGHT

    T_MINUS       shift, and go to state 38
    T_PLUSPLUS    shift, and go to state 39
    T_MINUSMINUS  shift, and go to state 40
    T_LBRACKET    shift, and go to state 41
    T_NUMBER      shift, and go to state 42
    T_NAME_STR    shift, and go to state 20

    FUNCTION_CALL     go to state 43
    LOGIC_OR_EXPR     go to state 71
    LOGIC_AND_EXPR    go to state 45
    OR_EXPR           go to state 46
    XOR_EXPR          go to state 47
    AND_EXPR          go to state 48
    EQUALITY_EXPR     go to state 49
    COMPARISSON_EXPR  go to state 50
    SHIFT_EXPR        go to state 51
    ADD_EXPR          go to state 52
    TERM              go to state 53
    UNARY             go to state 54
    FACTOR            go to state 55
    VARIABLE          go to state 56


State 38

   64 UNARY: T_MINUS . FACTOR

    T_LBRACKET  shift, and go to state 41
    T_NUMBER    shift, and go to state 42
    T_NAME_STR  shift, and go to state 20

    FUNCTION_CALL  go to state 43
    FACTOR         go to state 72
    VARIABLE       go to state 56


State 39

   65 UNARY: T_PLUSPLUS . VARIABLE

    T_NAME_STR  shift, and go to state 20

    VARIABLE  go to state 73


State 40

   66 UNARY: T_MINUSMINUS . VARIABLE

    T_NAME_STR  shift, and go to state 20

    VARIABLE  go to state 74


State 41

   69 FACTOR: T_LBRACKET . ADD_EXPR T_RBRACKET

    T_MINUS       shift, and go to state 38
    T_PLUSPLUS    shift, and go to state 39
    T_MINUSMINUS  shift, and go to state 40
    T_LBRACKET    shift, and go to state 41
    T_NUMBER      shift, and go to state 42
    T_NAME_STR    shift, and go to state 20

    FUNCTION_CALL  go to state 43
    ADD_EXPR       go to state 75
    TERM           go to state 53
    UNARY          go to state 54
    FACTOR         go to state 55
    VARIABLE       go to state 56


State 42

   68 FACTOR: T_NUMBER .

    $default  reduce using rule 68 (FACTOR)


State 43

   70 FACTOR: FUNCTION_CALL .

    $default  reduce using rule 70 (FACTOR)


State 44

   15 STATEMENT: T_RETURN LOGIC_OR_EXPR . T_SEMICOLON
   36 LOGIC_OR_EXPR: LOGIC_OR_EXPR . T_LOGICOR LOGIC_AND_EXPR

    T_SEMICOLON  shift, and go to state 76
    T_LOGICOR    shift, and go to state 77


State 45

   35 LOGIC_OR_EXPR: LOGIC_AND_EXPR .
   38 LOGIC_AND_EXPR: LOGIC_AND_EXPR . T_LOGICAND OR_EXPR

    T_LOGICAND  shift, and go to state 78

    $default  reduce using rule 35 (LOGIC_OR_EXPR)


State 46

   37 LOGIC_AND_EXPR: OR_EXPR .
   40 OR_EXPR: OR_EXPR . T_BITWISE_OR COMPARISSON_EXPR

    T_BITWISE_OR  shift, and go to state 79

    $default  reduce using rule 37 (LOGIC_AND_EXPR)


State 47

   39 OR_EXPR: XOR_EXPR .
   42 XOR_EXPR: XOR_EXPR . T_BITWISE_XOR AND_EXPR

    T_BITWISE_XOR  shift, and go to state 80

    $default  reduce using rule 39 (OR_EXPR)


State 48

   41 XOR_EXPR: AND_EXPR .
   44 AND_EXPR: AND_EXPR . T_BITWISE_AND EQUALITY_EXPR

    T_BITWISE_AND  shift, and go to state 81

    $default  reduce using rule 41 (XOR_EXPR)


State 49

   43 AND_EXPR: EQUALITY_EXPR .
   46 EQUALITY_EXPR: EQUALITY_EXPR . T_EQUAL COMPARISSON_EXPR
   47              | EQUALITY_EXPR . T_NOTEQUAL COMPARISSON_EXPR

    T_EQUAL     shift, and go to state 82
    T_NOTEQUAL  shift, and go to state 83

    $default  reduce using rule 43 (AND_EXPR)


State 50

   45 EQUALITY_EXPR: COMPARISSON_EXPR .
   49 COMPARISSON_EXPR: COMPARISSON_EXPR . T_LESSTHAN SHIFT_EXPR
   50                 | COMPARISSON_EXPR . T_LESSEQUAL SHIFT_EXPR
   51                 | COMPARISSON_EXPR . T_MOREEQUAL SHIFT_EXPR
   52                 | COMPARISSON_EXPR . T_MORETHAN SHIFT_EXPR

    T_LESSTHAN   shift, and go to state 84
    T_MORETHAN   shift, and go to state 85
    T_LESSEQUAL  shift, and go to state 86
    T_MOREEQUAL  shift, and go to state 87

    $default  reduce using rule 45 (EQUALITY_EXPR)


State 51

   48 COMPARISSON_EXPR: SHIFT_EXPR .
   54 SHIFT_EXPR: SHIFT_EXPR . T_BITWISE_LEFT ADD_EXPR
   55           | SHIFT_EXPR . T_BITWISE_RIGHT ADD_EXPR

    T_BITWISE_LEFT   shift, and go to state 88
    T_BITWISE_RIGHT  shift, and go to state 89

    $default  reduce using rule 48 (COMPARISSON_EXPR)


State 52

   53 SHIFT_EXPR: ADD_EXPR .
   57 ADD_EXPR: ADD_EXPR . T_PLUS TERM
   58         | ADD_EXPR . T_MINUS TERM

    T_PLUS   shift, and go to state 90
    T_MINUS  shift, and go to state 91

    $default  reduce using rule 53 (SHIFT_EXPR)


State 53

   56 ADD_EXPR: TERM .
   60 TERM: TERM . T_TIMES UNARY
   61     | TERM . T_DIVIDE UNARY

    T_TIMES   shift, and go to state 92
    T_DIVIDE  shift, and go to state 93

    $default  reduce using rule 56 (ADD_EXPR)


State 54

   59 TERM: UNARY .
   62     | UNARY . T_MODULO FACTOR

    T_MODULO  shift, and go to state 94

    $default  reduce using rule 59 (TERM)


State 55

   63 UNARY: FACTOR .

    $default  reduce using rule 63 (UNARY)


State 56

    4 FUNCTION_CALL: VARIABLE . T_LBRACKET VARIABLE_LIST T_RBRACKET
   67 FACTOR: VARIABLE .

    T_LBRACKET  shift, and go to state 95

    $default  reduce using rule 67 (FACTOR)


State 57

   11 MEGA_STATEMENT: T_CURLYLEFT STATEMENT_LIST T_CURLYRIGHT .

    $default  reduce using rule 11 (MEGA_STATEMENT)


State 58

   13 STATEMENT_LIST: STATEMENT_LIST STATEMENT .

    $default  reduce using rule 13 (STATEMENT_LIST)


State 59

   14 STATEMENT: ASSIGN_EXPR T_SEMICOLON .

    $default  reduce using rule 14 (STATEMENT)


State 60

   19 STATEMENT: DECLARATOR T_SEMICOLON .

    $default  reduce using rule 19 (STATEMENT)


State 61

   28 ASSIGN_EXPR: DECLARATOR T_ASSIGN . LOGIC_OR_EXPR

    T_MINUS       shift, and go to state 38
    T_PLUSPLUS    shift, and go to state 39
    T_MINUSMINUS  shift, and go to state 40
    T_LBRACKET    shift, and go to state 41
    T_NUMBER      shift, and go to state 42
    T_NAME_STR    shift, and go to state 20

    FUNCTION_CALL     go to state 43
    LOGIC_OR_EXPR     go to state 96
    LOGIC_AND_EXPR    go to state 45
    OR_EXPR           go to state 46
    XOR_EXPR          go to state 47
    AND_EXPR          go to state 48
    EQUALITY_EXPR     go to state 49
    COMPARISSON_EXPR  go to state 50
    SHIFT_EXPR        go to state 51
    ADD_EXPR          go to state 52
    TERM              go to state 53
    UNARY             go to state 54
    FACTOR            go to state 55
    VARIABLE          go to state 56


State 62

   27 ASSIGN_EXPR: VARIABLE T_ASSIGN . LOGIC_OR_EXPR

    T_MINUS       shift, and go to state 38
    T_PLUSPLUS    shift, and go to state 39
    T_MINUSMINUS  shift, and go to state 40
    T_LBRACKET    shift, and go to state 41
    T_NUMBER      shift, and go to state 42
    T_NAME_STR    shift, and go to state 20

    FUNCTION_CALL     go to state 43
    LOGIC_OR_EXPR     go to state 97
    LOGIC_AND_EXPR    go to state 45
    OR_EXPR           go to state 46
    XOR_EXPR          go to state 47
    AND_EXPR          go to state 48
    EQUALITY_EXPR     go to state 49
    COMPARISSON_EXPR  go to state 50
    SHIFT_EXPR        go to state 51
    ADD_EXPR          go to state 52
    TERM              go to state 53
    UNARY             go to state 54
    FACTOR            go to state 55
    VARIABLE          go to state 56


State 63

   33 ASSIGN_EXPR: VARIABLE T_PLUSPLUS .

    $default  reduce using rule 33 (ASSIGN_EXPR)


State 64

   34 ASSIGN_EXPR: VARIABLE T_MINUSMINUS .

    $default  reduce using rule 34 (ASSIGN_EXPR)


State 65

   29 ASSIGN_EXPR: VARIABLE T_ADDSELF . LOGIC_OR_EXPR
